[tests] untying updater tests from the platform and migrating to NIO 2 / JUnit 5
GitOrigin-RevId: 2ed7da4770b3923a15a70d427d3db6cfc1ad7bab